# Pandora

./: .gitignore  CMakeLists.txt  build.sh  panic.txt  setup_scripts.sh
.zed/: settings.json
Kext/: .gitignore  CLAUDE.md  CMakeLists.txt  build.sh
Kext/misc/: Info.plist
Kext/scripts/: clean  cpi  inst  prod
Kext/src/: Globals.cpp  Globals.h  KernelUtilities.cpp  OSVariant.h  Pandora.cpp  Pandora.h  PandoraUserClient.cpp  PandoraUserClient.h  TimeUtilities.cpp  TimeUtilities.h  kmod.cpp  kpi.cpp  kpi.h  routines.S  routines.h
Kext/src/Modules/: HwAccessModule.cpp  HwAccessModule.h  ModuleSystem.cpp  ModuleSystem.h  PatchOSVariantModule.cpp  PatchOSVariantModule.h
Kext/src/Utils/: KernelCall.cpp  KernelCall.h  KernelUtilities.cpp  KernelUtilities.h  OSVariant.h  PandoraLog.h  VersionUtilities.h
Tests/: Makefile  entitlements.plist  pandora.c  pandora.h  test.c
build-kext/Pandora.kext/Contents/: Info.plist
build-kext/Pandora.kext/Contents/MacOS/: Pandora
fun/eligibility/: ent.plist  get_internal_eligibility_state_2  get_internal_eligibility_state_2.c
misc/: Info.plist
scripts/: bump  prod
src/: Globals.cpp  Globals.h  KernelUtilities.h  Pandora.cpp  PandoraLog.cpp  PandoraLog.h  PandoraUserClient.cpp  PandoraUserClient.h  ProcUtils.h  Version.h.in  kmod.cpp  routines.S
